--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.3.3",
     "html-pdf": "^2.2.0",
     "markdown-styles": "^3.1.10",
     "prettier": "^1.15.3",
