modify package.json 'main' field

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "docsify-pdf-converter",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js"
   },
