--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "demo-docsify-pdf-converter",
-  "version": "1.0.4",
+  "name": "docsify-pdf-converter",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "bin": {
     "converter": "bin/cli"
   },
   "scripts": {
-    "start": "nodemon src/index.js",
     "patch-release": "npm version patch && npm publish && git push --follow-tags"
   },
-  "keywords": [],
+  "keywords": [
+    "docsify",
+    "pdf",
+    "converter",
+    "cli"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.3.3",
-    "html-pdf": "^2.2.0",
+    "is-url": "^1.2.4",
+    "lodash": "^4.17.11",
     "markdown-link-extractor": "^1.2.0",
     "markdown-styles": "^3.1.10",
-    "prettier": "^1.15.3",
+    "puppeteer": "^1.12.2",
     "rcfile": "^1.0.3",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "yesno": "^0.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^1.15.3"
   }
 }
