--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "converter": "bin/cli"
+    "converter": ".bin/cli",
+    "docsify-pdf-converter": ".bin/cli"
   },
   "scripts": {
     "patch-release": "npm version patch && npm publish && git push --follow-tags"
