--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.3.3",
+    "docsify-cli": "^4.3.0",
+    "find-free-port": "^2.0.0",
     "is-url": "^1.2.4",
     "lodash": "^4.17.11",
     "markdown-link-extractor": "^1.2.0",
