--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "docsify-pdf-converter",
   "version": "2.0.6",
-  "description": "",
+  "description": "A magical pdf generator for docsify projects.",
   "main": "index.js",
+  "author": {
+    "name": "Ivan Gorbunov",
+    "email": "meff34@gmail.com",
+    "url": "https://github.com/meff34"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/meff34/docsify-to-pdf-converter.git"
+  },
   "bin": {
     "converter": ".bin/cli.js",
     "docsify-pdf-converter": ".bin/cli.js"
@@ -16,7 +25,6 @@
     "converter",
     "cli"
   ],
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.3.3",
