--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docsify-pdf-converter",
-  "version": "2.0.7",
+  "version": "2.1.0-beta.0",
   "description": "A magical pdf generator for docsify projects.",
   "main": "index.js",
   "author": {
